fix(api): add User-Agent header and fallback curated news payload for robust rendering